--- a/PCL2.Neo/PCL2.Neo.csproj
+++ b/PCL2.Neo/PCL2.Neo.csproj
@@ -43,4 +43,8 @@
   <ItemGroup>
     <None Include="G:\PCL2.Neo\PCL2.Neo\.editorconfig" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\MyMsg\" />
+  </ItemGroup>
 </Project>
