--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
                   echo "The current time is: ${{ steps.date.outputs.time }}"
 
     build:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
         needs: time
         steps:
             - name: Checkout
